@@ -2448,8 +2448,6 @@ __ZN7WebCore8Document33webkitDidExitFullScreenForElementEPNS_7ElementE
 __ZN7WebCore8Document34webkitDidEnterFullScreenForElementEPNS_7ElementE
 __ZN7WebCore8Document34webkitWillExitFullScreenForElementEPNS_7ElementE
 __ZN7WebCore8Document35webkitWillEnterFullScreenForElementEPNS_7ElementE
-__ZN7WebCore8Document25setFullScreenRendererSizeERKNS_7IntSizeE
-__ZN7WebCore8Document36setFullScreenRendererBackgroundColorENS_5ColorE
 __ZN7WebCore8Document22setAnimatingFullScreenEb
 __ZNK7WebCore7Element25containsFullScreenElementEv
 #endif
